@@ -4,6 +4,9 @@ Changelog
 1.1 (unreleased)
 ----------------
 
+- Fix user enumeration if login parameter passed.
+  [mathias.leimgruber]
+
 - Use Plone default translation for logged-in message.
   [jone]
 
